added hexagon item, GridAdapter

--- a/BarBot/Droid/BarBot.Droid.csproj
+++ b/BarBot/Droid/BarBot.Droid.csproj
@@ -83,8 +83,8 @@
     <Compile Include="WebSocket\DroidWebSocketHandler.cs" />
     <Compile Include="Util\NavigationServiceExtension.cs" />
     <Compile Include="Util\RESTService.cs" />
-    <Compile Include="View\Menu\ImageAdapter.cs" />
     <Compile Include="View\Menu\NameDialogFragment.cs" />
+    <Compile Include="View\Menu\GridAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -119,8 +119,8 @@
     <AndroidResource Include="Resources\drawable-mdpi\ic_ab_up_compat.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\ic_ab_up_compat.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_ab_up_compat.png" />
-    <AndroidResource Include="Resources\values-v21\styles.xml" />
     <AndroidResource Include="Resources\layout\NameDialogFragment.xml" />
+    <AndroidResource Include="Resources\layout\hexagon_item.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="View\" />
@@ -128,7 +128,6 @@
     <Folder Include="View\Detail\" />
     <Folder Include="Util\" />
     <Folder Include="WebSocket\" />
-    <Folder Include="Resources\values-v21\" />
     <Folder Include="Resources\menu\" />
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
