--- a/BarBot/Droid/packages.config
+++ b/BarBot/Droid/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="CallygraphyXamarin" version="2.2.0" targetFramework="monoandroid60" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
-  <package id="modernhttpclient" version="2.4.2" targetFramework="monoandroid60" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid44" />
+  <package id="Square.OkHttp" version="2.4.0.0" targetFramework="monoandroid60" />
+  <package id="Square.OkIO" version="1.5.0.0" targetFramework="monoandroid60" />
+  <package id="Square.Picasso" version="2.5.2.1" targetFramework="monoandroid60" />
   <package id="Websockets.Pcl" version="1.1.9" targetFramework="monoandroid60" developmentDependency="true" />
 </packages>
