disabled rotation, styled ice/garnish switches, added ice/garnish buttons, changed xml files to axml

--- a/BarBot/Droid/BarBot.Droid.csproj
+++ b/BarBot/Droid/BarBot.Droid.csproj
@@ -106,32 +106,32 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\DrinkMenu.axml" />
     <AndroidResource Include="Resources\values\colors.xml" />
-    <AndroidResource Include="Resources\menu\top_menus.xml" />
+    <AndroidResource Include="Resources\menu\top_menus.axml" />
     <AndroidResource Include="Resources\drawable\CustomTile.png" />
     <AndroidResource Include="Resources\drawable\HexagonTile.png" />
     <AndroidResource Include="Resources\drawable\HexagonTileGradient.png" />
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\values\dimens.xml" />
-    <AndroidResource Include="Resources\drawable\actionbar_icon_placeholder_compat.xml" />
-    <AndroidResource Include="Resources\drawable\actionbar_shadow.xml" />
-    <AndroidResource Include="Resources\layout\ActionBar.xml" />
+    <AndroidResource Include="Resources\drawable\actionbar_icon_placeholder_compat.axml" />
+    <AndroidResource Include="Resources\drawable\actionbar_shadow.axml" />
+    <AndroidResource Include="Resources\layout\ActionBar.axml" />
     <AndroidResource Include="Resources\layout\DrinkDetail.axml" />
     <AndroidResource Include="Resources\drawable-hdpi\ic_ab_up_compat.png" />
     <AndroidResource Include="Resources\drawable-mdpi\ic_ab_up_compat.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\ic_ab_up_compat.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_ab_up_compat.png" />
-    <AndroidResource Include="Resources\layout\NameDialogFragment.xml" />
-    <AndroidResource Include="Resources\layout\Hexagon.xml" />
+    <AndroidResource Include="Resources\layout\NameDialogFragment.axml" />
+    <AndroidResource Include="Resources\layout\Hexagon.axml" />
     <AndroidResource Include="Resources\drawable\custom_recipe.png" />
     <AndroidResource Include="Resources\values-v21\styles.xml" />
-    <AndroidResource Include="Resources\layout\ToolBar.xml" />
-    <AndroidResource Include="Resources\drawable\appbar_shadow.xml" />
+    <AndroidResource Include="Resources\layout\ToolBar.axml" />
+    <AndroidResource Include="Resources\drawable\appbar_shadow.axml" />
     <AndroidResource Include="Resources\drawable-hdpi\ic_search_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-mdpi\ic_search_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\ic_search_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_search_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_search_white_48dp.png" />
-    <AndroidResource Include="Resources\layout\ListViewRow.xml" />
+    <AndroidResource Include="Resources\layout\ListViewRow.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="View\" />
