--- a/BarBot/Droid/Properties/AndroidManifest.xml
+++ b/BarBot/Droid/Properties/AndroidManifest.xml
@@ -3,5 +3,12 @@
 	<uses-sdk android:minSdkVersion="21" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:label="BarBot" android:theme="@style/BarBotTheme" android:icon="@mipmap/icon"></application>
+	<application android:label="BarBot" android:theme="@style/BarBotTheme" android:icon="@mipmap/icon">
+		<activity android:name="DrinkMenuActivity"
+				  android:screenOrientation="portrait">
+		</activity>
+		<activity android:name="DrinkDetailActivity"
+			      android:screenOrientation="portrait">
+		</activity>
+	</application>
 </manifest>
