added Ingredient dialog, finished username dialog, added progress bar to GridView

--- a/BarBot/Droid/BarBot.Droid.csproj
+++ b/BarBot/Droid/BarBot.Droid.csproj
@@ -90,6 +90,7 @@
     <Compile Include="View\Menu\GridAdapter.cs" />
     <Compile Include="View\Detail\VolumeDialogFragment.cs" />
     <Compile Include="View\Detail\SuccessDialogFragment.cs" />
+    <Compile Include="View\Detail\IngredientDialogFragment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -132,6 +133,7 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_search_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_search_white_48dp.png" />
     <AndroidResource Include="Resources\layout\ListViewRow.axml" />
+    <AndroidResource Include="Resources\layout\IngredientDialogFragment.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="View\" />
