--- a/BarBot/Droid/BarBot.Droid.csproj
+++ b/BarBot/Droid/BarBot.Droid.csproj
@@ -149,6 +149,11 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_add_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_remove_white_48dp.png" />
     <AndroidResource Include="Resources\layout\IngredientSpinnerTextView.axml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_clear_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_clear_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_clear_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_clear_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_clear_white_48dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="View\" />
