--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -148,6 +148,10 @@
     <Compile Include="Migrations\20161231022337_add_second_stepper.designer.cs">
       <DependentUpon>20161231022337_add_second_stepper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20170126063933_AddFSRFields.cs" />
+    <Compile Include="Migrations\20170126063933_AddFSRFields.designer.cs">
+      <DependentUpon>20170126063933_AddFSRFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\BarbotContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestClient\TestClient.xaml.cs">
@@ -291,8 +295,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="SQLite.UWP.2015, Version=3.15.2" Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
-      <Name>SQLite for Universal Windows Platform %28SQLite.UWP.2015, Version=3.15.2%29</Name>
+    <SDKReference Include="SQLite.UWP.2015, Version=3.16.2">
+      <Name>SQLite for Universal Windows Platform</Name>
     </SDKReference>
     <SDKReference Include="WindowsDesktop, Version=10.0.14393.0">
       <Name>Windows Desktop Extensions for the UWP %28WindowsDesktop, Version=10.0.14393.0%29</Name>
