--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -22,8 +22,6 @@
     <CodesignKey>iPhone Developer: Naveen Yadav (ULY8T46758)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <MtouchFastDev>true</MtouchFastDev>
-    <MtouchUseSGen>true</MtouchUseSGen>
-    <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
@@ -39,8 +37,6 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Distribution</CodesignKey>
-    <MtouchUseSGen>true</MtouchUseSGen>
-    <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchFloat32>true</MtouchFloat32>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>SdkOnly</MtouchLink>
@@ -57,8 +53,6 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
-    <MtouchUseSGen>true</MtouchUseSGen>
-    <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchLink>None</MtouchLink>
     <MtouchArch>i386</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
@@ -78,8 +72,6 @@
     <DeviceSpecificBuild>true</DeviceSpecificBuild>
     <MtouchDebug>true</MtouchDebug>
     <MtouchFastDev>true</MtouchFastDev>
-    <MtouchUseSGen>true</MtouchUseSGen>
-    <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchFloat32>true</MtouchFloat32>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>SdkOnly</MtouchLink>
@@ -128,10 +120,7 @@
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Iconsettings.png" />
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Iconspotlight.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Iconapp_icon.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Icon120.png" />
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Icon180.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Icon87.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -147,6 +136,9 @@
     <Folder Include="View\Detail\IngredientTable\Picker\" />
     <Folder Include="Style\" />
     <Folder Include="Assets.xcassets\AppIcons.appiconset\" />
+    <Folder Include="Service\" />
+    <Folder Include="Service\Rest\" />
+    <Folder Include="Service\Navigation\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -165,11 +157,9 @@
     <Compile Include="View\Menu\DrinkCollectionViewCell.cs" />
     <Compile Include="View\Detail\DrinkDetailViewController.cs" />
     <Compile Include="View\Hexagon.cs" />
-    <Compile Include="Util\NavigationServiceExtension.cs" />
     <Compile Include="View\Menu\Search\DrinkSearchController.cs" />
     <Compile Include="View\Menu\Search\DrinkSearchResultsViewController.cs" />
     <Compile Include="View\Menu\Search\SearchResultCell.cs" />
-    <Compile Include="Util\RESTService.cs" />
     <Compile Include="View\Menu\Search\SearchControllerDelegate.cs" />
     <Compile Include="WebSocket\IosWebSocketHandler.cs" />
     <Compile Include="View\Detail\IngredientTable\IngredientTableSource.cs" />
@@ -184,6 +174,8 @@
     <Compile Include="Style\Color.cs" />
     <Compile Include="Style\SharedStyles.cs" />
     <Compile Include="Util\KeyboardManager.cs" />
+    <Compile Include="Service\Rest\RestService.cs" />
+    <Compile Include="Service\Navigation\NavigationServiceExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
@@ -203,7 +195,10 @@
     <MonoDevelop>
       <Properties>
         <Policies>
-          <DotNetNamingPolicy DirectoryNamespaceAssociation="PrefixedHierarchical" ResourceNamePolicy="FileFormatDefault" />
+          <DotNetNamingPolicy ResourceNamePolicy="FileFormatDefault" DirectoryNamespaceAssociation="PrefixedHierarchical">
+            <inheritsSet />
+            <inheritsScope />
+          </DotNetNamingPolicy>
         </Policies>
       </Properties>
     </MonoDevelop>
