--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -49,7 +49,7 @@
     <Compile Include="WebSocket\WebSocketUtil.cs" />
     <Compile Include="Service\WebSocket\IWebSocketService.cs" />
     <Compile Include="Service\WebSocket\WebSocketService.cs" />
-    <Compile Include="Service\Rest\IRestService.cs" />
+    <Compile Include="Service\Login\ILoginService.cs" />
     <Compile Include="Service\Navigation\INavigationService.cs" />
     <Compile Include="Service\Navigation\NavigationService.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
@@ -88,7 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Service\" />
-    <Folder Include="Service\Rest\" />
+    <Folder Include="Service\Login\" />
     <Folder Include="Service\WebSocket\" />
     <Folder Include="Service\Navigation\" />
   </ItemGroup>
