--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -153,6 +153,15 @@
       <DependentUpon>20170126063933_AddFSRFields.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\BarbotContextModelSnapshot.cs" />
+    <Compile Include="Pages\DrinkDetail.xaml.cs">
+      <DependentUpon>DrinkDetail.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Menu.xaml.cs">
+      <DependentUpon>Menu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\OrderQueue.xaml.cs">
+      <DependentUpon>OrderQueue.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestClient\TestClient.xaml.cs">
       <DependentUpon>TestClient.xaml</DependentUpon>
@@ -176,14 +185,15 @@
     <Compile Include="UserControls\Uc_OrderQueue.xaml.cs">
       <DependentUpon>Uc_OrderQueue.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\Uc_PartyMode.xaml.cs">
-      <DependentUpon>Uc_PartyMode.xaml</DependentUpon>
+    <Compile Include="Pages\PartyMode.xaml.cs">
+      <DependentUpon>PartyMode.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Uc_RecipeTile.xaml.cs">
       <DependentUpon>Uc_RecipeTile.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utils\Helpers.cs" />
     <Compile Include="Websocket\UWPWebsocketHandler.cs" />
+    <Compile Include="Websocket\UWPWebSocketService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -220,6 +230,18 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\DrinkDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OrderQueue.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ResourceDefinitions\Rd_Combobox.xaml">
       <SubType>Designer</SubType>
@@ -279,7 +301,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControls\Uc_PartyMode.xaml">
+    <Page Include="Pages\PartyMode.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -295,9 +317,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="SQLite.UWP.2015, Version=3.16.2">
-      <Name>SQLite for Universal Windows Platform</Name>
-    </SDKReference>
     <SDKReference Include="WindowsDesktop, Version=10.0.14393.0">
       <Name>Windows Desktop Extensions for the UWP %28WindowsDesktop, Version=10.0.14393.0%29</Name>
     </SDKReference>
