--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Compile Include="Model\Category.cs" />
     <Compile Include="Model\CategoryList.cs" />
+    <Compile Include="Model\ContainerList.cs" />
     <Compile Include="WebSocket\DictinaryOrEmptyArrayConverter.cs" />
     <Compile Include="WebSocket\Message.cs" />
     <Compile Include="Model\Ingredient.cs" />
